refactor: Add is_published column to Roadmap entity
- Added a new column named "is_published" to the Roadmap entity in the backend core module.
- The column is of type boolean and is set to false by default.
- This column will be used to track the publication status of roadmaps.